Добавление рабочих тестов
необходимо залить уроки, написать код для кнопки в Tesing.java для
выхода из теста.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PROT</string>
+    <string name="app_name">Learn&amp;&amp;Programming</string>
 
     <string name="navigation_drawer_open">Открыть меню</string>
     <string name="navigation_drawer_close">Закрыть меню</string>
